# wordle_solver2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  cleanup.zsh  config.yaml  design.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_wordle_solver.py  setup.py  wordle_solver_app.ipynb
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/scripts/: build-docs.sh  build-package.sh  install-dependencies.sh  install-dev-dependencies.sh  run-code-quality.sh  run-security-scan.sh  run-tests.sh  validate-docs.sh
.github/workflows/: ci-cd.yml  code-quality.yml  codeql.yml  dependencies.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md  CI_CD_GUIDE.md  GameRules.md  Makefile  Requirements.md  Usage.md  architecture.rst  changelog.rst  conf.py  contributing.rst  game_modes.rst  game_rules.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/_static/: .gitkeep
docs/api/: game.rst  index.rst  modules.rst  strategies.rst  utils.rst
docs/api/_autosummary/: src.common.cache.rst  (+17 more)
docs/release_notes/: 1.0.1.md
logs/: wordle_solver.log.2025-06-27
src/: __init__.py  common_words.txt  logging_config.yaml  main.py  words.txt
src/common/: __init__.py  cache.py  di_container.py  strategy_manager.py  types.py  utils.py
src/config/: __init__.py  settings.py
src/data/: positional_frequency.py  words.txt
src/events/: __init__.py  concrete_observers.py  enums.py  event.py  observer.py
src/frontend/: __init__.py  cli_interface.py  cli_interface_legacy.py
src/modules/: __init__.py  app.py  enhanced_app.py  logging_config.yaml  logging_utils.py
src/tests/: __init__.py  conftest.py  manual_event_test.py  simple_test.py  test_app_clear_history_integration.py  test_clear_history_mode.py  test_config_management.py  test_events_core.py  test_events_enums.py  test_events_exceptions.py  test_events_observer.py  test_game_history.py  test_game_history_manager.py  test_game_id_validation.py  test_game_rules.py  test_game_sequence.py  test_memory_profiling_removal.py  test_migration_integration.py  test_minimax_strategy.py  test_minimax_strategy_regression.py  test_review_app_functionality.py  test_review_cli_interface.py  test_review_integration.py  test_review_mode_features.py  test_solver.py  test_solver_strategies.py  test_stateless_solver_strategies.py  test_strategy_base.py  test_strategy_switching.py  test_two_step_strategy.py  test_weighted_gain_strategy.py  test_word_manager.py  test_word_manager_integration.py  test_word_manager_stateless.py
src/validation/: comprehensive_migration_validation.py
tests/: test_game_history_manager.py  test_review_app_functionality.py  test_review_cli_interface.py  test_review_integration.py
(+67 files in other folders)
