[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle-solver"
version = "1.0.0"
description = "A Wordle game and solver application"
authors = [
    {name = "Richard Quinn", email = "example@example.com"},
]
keywords = ["wordle", "game", "solver", "puzzle"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3",
    "click>=8.1.7",
    "psutil>=5.9.0",
    "PyYAML>=6.0.2",
    "rich>=14.0.0",
    "six>=1.17.0",
    "structlog>=25.4.0",
    "setuptools>=80.9.0",
]

[project.scripts]
wordle-solver = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "isort>=5.12.0",
    "types-psutil>=5.9.0",
    "types-PyYAML>=6.0.0",
    "types-six>=1.16.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B311", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true
allow_untyped_calls = true
allow_untyped_defs = true
allow_incomplete_defs = true
allow_subclassing_any = true
allow_untyped_globals = true
allow_redefinition = true
local_partial_types = true
show_error_codes = false
strict = false
disable_error_code = [
    "var-annotated",
    "no-any-return",
    "call-overload",
    "assignment",
    "union-attr",
    "arg-type",
    "attr-defined",
    "index",
    "no-untyped-def",
    "return-value",
    "misc",
    "has-type",
    "syntax"
]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "src.*",
    "src.modules.backend.solver.*",
    "src.frontend.cli.*",
    "src.common.*",
    "src.modules.*"
]
ignore_errors = true
